private-chain/consensus/nodes/full/ingress_grpc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: consensus-grpc-ingress
  annotations:
    kubernetes.io/tls-acme: 'true'
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  tls:
  - hosts:
    - SET-IT.celestia-robusta.com
    secretName: consensus-grpc-tls
  rules:
  - host: SET-IT.celestia-robusta.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: consensus-api
            port:
              name: grpc
